--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,7 +1,7 @@
 todoyu core changelog
 
 core 2.2.0 - not released yet
-	*
+	* Removed: TodoyuString::replaceOnce()
 
 core 2.1.4 - 2011-12-13
 	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
