--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -4,6 +4,7 @@ core 2.2.0 - not released yet
 	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
 	* Feature: Removing valueless foreign records does not require confirmation anymore
 	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
+	* Removed: scal calendar/date picker library
 	* Removed: TodoyuString::replaceOnce()
 	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method
 
