--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,12 +1,11 @@
 todoyu core changelog
 
 core 2.2.0 - not released yet
-	* Added: Todoyu.Popups (open, openElement, openContent) can now optionally position the popup to a top coordinate
-	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
-	* Added: JS-Handling for contentItemTabs
-	* Bugfix: fixed bug in preference saving
 	* Feature: Removing valueless foreign records does not require confirmation anymore
 	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
+	* Added: Todoyu.Popups (open, openElement, openContent) can now optionally position the popup to a top coordinate
+	* Added: JavaScript Date prototypes: addDays(), subtractDays(), isToday()
+	* Added: JS-Handling for contentItemTabs
 	* Added: Todoyu.Form.assistDurationInput() for onblur-validation of duration input fields
 	* Added: New form hook for data modification immediately before rendering (use TodoyuFormHook::registerRenderForm() for callback registration)
 	* Added: global confirmation dialog for toggling of record-types with exclusive "is_preferred" attribute
@@ -32,6 +31,7 @@ core 2.2.0 - not released yet
 	* Changed: Minimum PHP version is 5.2.5
 	* Changed: Renamed TodoyuDateRange::getDiff() to getDuration(), TodoyuDayRange::getDiffInDays() to getDurationInDays()
 	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
+	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
 	* Removed: scal calendar/date picker library
 	* Removed: TodoyuString::replaceOnce()
 	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method
