--- a/core/locale/sr_RS/global.xml
+++ b/core/locale/sr_RS/global.xml
@@ -2,7 +2,9 @@
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">Да</label>
+	<label index="ok">Океј</label>
 	<label index="no">Не</label>
+	<label index="dismiss">Одбиј</label>
 	<label index="loading">Учитавање</label>
 	<label index="expandall">Погледај све</label>
 	<label index="author">Аутор</label>
@@ -20,6 +22,7 @@
 	<label index="delete">Обриши</label>
 	<label index="deleteRecord">Обриши унос</label>
 	<label index="show">Покажи</label>
+	<label index="showDetails">Покажи детаље</label>
 	<label index="hide">Сакриј</label>
 	<label index="unhide">Одкриј</label>
 	<label index="rename">Преимењуј</label>
@@ -27,15 +30,19 @@
 	<label index="update">Ажурирај</label>
 	<label index="search">Претрага</label>
 	<label index="back">Назад</label>
+	<label index="version">Верзија</label>
 	<label index="filter">Филтер</label>
 	<label index="type">Тип</label>
 	<label index="record">Унос</label>
 	<label index="records">Уноси</label>
 	<label index="components">Компоненте</label>
 	<label index="status">Статус</label>
+	<label index="locked">Закључано</label>
+	<label index="enabled">Омогућено</label>
 	<label index="what">Шта</label>
 	<label index="where">Где</label>
 	<label index="when">Одкад</label>
+	<label index="new">Ново</label>
 	<label index="until">Докад</label>
 	<label index="private">Приватно</label>
 	<label index="start">Крени</label>
@@ -45,6 +52,7 @@
 	<label index="deadline">Рок</label>
 	<label index="closeWindow">Затвори прозор</label>
 	<label index="noAccess.errorMessage">Немате приступ траженом податку</label>
+	<label index="notLoggedIn.errorMessage">Ваш логин је истекао. Захтев није се мого завршити. Молимо вас да се прво поново улогујете.</label>
 	<label index="close">Затвори</label>
 	<label index="noAccess.pageTitle">Нема приступа</label>
 	<label index="noAccess.goBackToLastPage">Врати се на последњу страницу</label>
@@ -74,4 +82,25 @@
 	<label index="headlet.about.label">О todoyu</label>
 	<label index="unknown">Нема податка</label>
 	<label index="loaderBox.title">Наставља се за тренутак</label>
+	<label index="panelwidget.toggle">Отвори/Затвори овај водић</label>
+	<label index="date_update">Дан задњег ажужирања</label>
+	<label index="date_create">Дан стварања</label>
+	<label index="id_person_create">Створио:</label>
+	<label index="of">од</label>
+	<label index="public">Јавно</label>
+	<label index="notpublic">Није јавно</label>
+	<label index="wizard">Водић</label>
+	<label index="wizard.close">Затвори водић</label>
+	<label index="wizard.close.confirm">Да ли стварно желите да затворите овај водић?</label>
+	<label index="wizard.back">Назад</label>
+	<label index="wizard.next">Настави</label>
+	<label index="log.debug">Дебуг информације</label>
+	<label index="log.notice">Обавештања</label>
+	<label index="log.error">Обичне грешке</label>
+	<label index="log.security">Питања сигурности</label>
+	<label index="log.fatal">Фаталне грешке</label>
+	<label index="controllerError.oops">Упс!</label>
+	<label index="controllerError.info">todoyu не може да руководи са овим захтевом.</label>
+	<label index="controllerError.reason">Можда сте погрешили УРЛ или је захтеван додатак можда уклоњен? Кад сте додали новост - да ли сте изпразнили "cache"?</label>
+	<label index="controllerError.goBack">Врати се на todoyu</label>
 </labels>
