--- a/lib/js/tiny_mce/changelog.txt
+++ b/lib/js/tiny_mce/changelog.txt
@@ -1,3 +1,18 @@
+Version 3.4.9 (2012-02-23)
+	Added settings to wordcount plugin to configure update rate and checking wordcount on backspace and delete using wordcount_update_rate and wordcount_update_on_delete.
+	Fixed bug in Webkit and IE where deleting empty paragraphs would remove entire editor contents.
+	Fixed bug where pressing enter on end of list item with a heading would create a new item with heading.	
+	Fixed edit css style dialog text-decoration none checkbox so it disables other text-decoration options when enabled.
+	Fixed bug in Gecko where undo wasn't added when focus was lost.
+	Fixed bug in Gecko where shift-enter in table cell ending with BR doesn't move caret to new line.
+	Fixed bug where right-click on formatted text in IE selected the entire line.
+	Fixed bug where text ending with space could not be unformatted in IE.
+	Fixed bug where caret formatting would be removed when moving the caret when a selector expression was used.
+	Fixed bug where formatting would be applied to the body element when all contents where selected and format had both inline and selector parts.
+	Fixed bug where the media plugin would throw errors if you had iframe set as an invalid element in config.
+	Fixed bug where the caret would be placed at the top of the document if you inserted a table and undo:ed that operation. Patch contributed by Wesley Walser.
+	Fixed bug where content css files where loaded twice into the iframe.
+	Fixed so elements with comments would be trated as non empty elements. Patch contributed by Arjan Scherpenisse.
 Version 3.4.8 (2012-02-02)
 	Fixed bug in IE where selected text ending with space cannot be formatted then formatted again to get original text.
 	Fixed bug in IE where images larger than editor area were being deselected when toolbar buttons are clicked.
