* added project company filters: tasks created static+dynamic * added dynamic date options: current month, last year, current year, next year * moved handling of dyn. date options config and timestamp calculation taskFilterDataSource from into searchFilterHelper * merged+moved redundant task/project dyn. date labels into core's date locale * changed TodoyuTime::getYearStart signature to static

--- a/core/locale/cs_CZ/date.xml
+++ b/core/locale/cs_CZ/date.xml
@@ -50,4 +50,14 @@
 	<label index="monthly">Měsíčně</label>
 	<label index="yearly">Ročně</label>
 	<label index="today">Dnes</label>
+	<label index="dyndate.today">Dnes</label>
+	<label index="dyndate.tomorrow">Zítra</label>
+	<label index="dyndate.dayaftertomorrow">Pozítří</label>
+	<label index="dyndate.yesterday">Včera</label>
+	<label index="dyndate.daybeforeyesterday">Předevčírem</label>
+	<label index="dyndate.currentweek">Tento týden</label>
+	<label index="dyndate.nextweek">Příští týden</label>
+	<label index="dyndate.lastweek">Minulý týden</label>
+	<label index="dyndate.lastyear">Příští rok</label>
+	<label index="dyndate.nextyear">Minulý rok</label>
 </labels>
