--- a/core/locale/fr_FR/date.xml
+++ b/core/locale/fr_FR/date.xml
@@ -50,4 +50,15 @@
 	<label index="monthly">Mensuel</label>
 	<label index="yearly">Annuel</label>
 	<label index="today">Aujourd'hui</label>
+	<label index="dyndate.today">Aujourd'hui</label>
+	<label index="dyndate.tomorrow">Demain</label>
+	<label index="dyndate.dayaftertomorrow">Après-demain</label>
+	<label index="dyndate.yesterday">Hier</label>
+	<label index="dyndate.daybeforeyesterday">Avant-hier</label>
+	<label index="dyndate.currentweek">Semaine courante</label>
+	<label index="dyndate.nextweek">Semaine prochaine</label>
+	<label index="dyndate.lastweek">Semaine dernière</label>
+	<label index="dyndate.currentyear">Année courante</label>
+	<label index="dyndate.lastyear">Année dernière</label>
+	<label index="dyndate.nextyear">Année prochaine</label>
 </labels>
