--- a/install/locale/sr_RS/installer.xml
+++ b/install/locale/sr_RS/installer.xml
@@ -20,8 +20,8 @@
 	<label index="servercheck.writableCheck">Фасцикле и фајлове вритабле</label>
 	<label index="servercheck.writable">Вритабле</label>
 	<label index="servercheck.notWritable">НИЈЕ ВРИТАБЛЕ</label>
-	<label index="servercheck.ready">Сервер је спремна за todoyu 2.1</label>
-	<label index="servercheck.notReady">Сервер НИЈЕ спремна за todoyu 2.1</label>
+	<label index="servercheck.ready">Сервер је спремна за todoyu</label>
+	<label index="servercheck.notReady">Сервер НИЈЕ спремна за todoyu</label>
 	<label index="dbconnection.title">Подешавање базе података за повезивање</label>
 	<label index="dbconnection.button">Подешавање базе података за конфигурацију</label>
 	<label index="dbconnection.server">Сервер</label>
