--- a/install/locale/cs_CZ/installer.xml
+++ b/install/locale/cs_CZ/installer.xml
@@ -11,17 +11,17 @@
 	<label index="license.title">Licenční ujednání</label>
 	<label index="license.button">Souhlasím, pokračuj dalším krokem</label>
 	<label index="license.text">Vítejte při instalaci todoyu!</label>
-	<label index="servercheck.title">Kontrola servru</label>
+	<label index="servercheck.title">Kontrola serveru</label>
 	<label index="servercheck.button">Pokračovat</label>
-	<label index="servercheck.buttonRecheck">Znovu zkontrolovat servr</label>
-	<label index="servercheck.yourphpversion">Verze vašeho servru</label>
+	<label index="servercheck.buttonRecheck">Znovu zkontrolovat server</label>
+	<label index="servercheck.yourphpversion">Verze vašeho serveru</label>
 	<label index="servercheck.yourphpversion.ok">OK</label>
 	<label index="servercheck.yourphpversion.error">STARÁ VERZE</label>
 	<label index="servercheck.writableCheck">Zapisovatelné Složky / Soubory</label>
 	<label index="servercheck.writable">Zápis povolen</label>
 	<label index="servercheck.notWritable">ZÁPIS NEPOVOLEN</label>
-	<label index="servercheck.ready">Servr je připraven pro instalaci todoyu</label>
-	<label index="servercheck.notReady">Server NENÍ připraven pro todoyu</label>
+	<label index="servercheck.ready">Server je připraven pro instalaci todoyu 2.1</label>
+	<label index="servercheck.notReady">Server NENÍ připraven pro todoyu 2.1</label>
 	<label index="dbconnection.title">Nastavení databázového spojení</label>
 	<label index="dbconnection.button">Uložit databázové spojení</label>
 	<label index="dbconnection.server">Server</label>
@@ -39,6 +39,7 @@
 	<label index="dbselect.dbEmpty">prázdná</label>
 	<label index="dbselect.dbNotEmpty">neprázdná</label>
 	<label index="dbselect.tables">tabulky</label>
+	<label index="dbselect.manual">Jestliže detekce dostupných databází je z bezpečnostních důvodů na vašem serveru zakázána a výše zmíněné pole neobsahuje nic na výběr, zadejte prosím jméno vaší databáze zde:</label>
 	<label index="importtables.title">Import databázových tabulek</label>
 	<label index="importtables.button">Importovat databázové tabulky</label>
 	<label index="importtables.coretables">TODOYU ZÁKLADNÍ TABULKY</label>
@@ -52,30 +53,31 @@
 	<label index="systemconfig.locale">Jazyk (Stát)</label>
 	<label index="systemconfig.timezone">Časová zóna</label>
 	<label index="systemconfig.text">Zadejte základní konfiguraci systému</label>
+	<label index="systemconfig.text.error">Zadejte prosím jméno systému a Emailovou adresu</label>
 	<label index="adminaccount.title">Tvorba účtu správce</label>
 	<label index="adminaccount.email">Email správce</label>
 	<label index="adminaccount.button">Vytvořit účet správce</label>
+	<label index="adminaccount.username">Uživatelské jméno</label>
+	<label index="adminaccount.password">Heslo</label>
 	<label index="adminaccount.companyname">Jméno společnosti</label>
 	<label index="adminaccount.adminfirstname">Jméno</label>
 	<label index="adminaccount.adminlastname">Příjmení</label>
-	<label index="adminaccount.username">Uživatelské jméno</label>
-	<label index="adminaccount.password">Heslo</label>
 	<label index="adminaccount.repeatPassword">Opakovat heslo</label>
 	<label index="adminaccount.passwordHint">nejméně 5 znaků</label>
 	<label index="adminaccount.text">Vložte údaje o účtu správce</label>
 	<label index="adminaccount.error">Ověřte zadané údaje</label>
 	<label index="importdemodata.title">Import vzorových dat</label>
-	<label index="importdemodata.checkboxlabel">Importovat vzorové data</label>
+	<label index="importdemodata.checkboxlabel">Importovat vzorová data</label>
 	<label index="importdemodata.button">Pokračovat</label>
 	<label index="importdemodata.text">Můžete zvolit automatické nahrání vzorových dat na konci instalace. V opačném případě po instalaci systém nebude obsahovat žádná vzorová data a bude připraven pro vaše vlastní data.</label>
 	<label index="importdemodata.contains">Vzorová data obsahují: projekty, úkoly, adresy, společnosti, komentáře, odpovědi, role, pracovní položky, filtry a další.</label>
 	<label index="finish.title">Úspěšná instalace</label>
 	<label index="finish.text">Instalace proběhla úspěšně</label>
-	<label index="finish.button">Přejít na příhlašovací stránku</label>
+	<label index="finish.button">Přejít na přihlašovací stránku</label>
 	<label index="finish.note">Nyní se můžete přihlásit. Následující krok může trvat delší dobu (v závislosti na vašem procesoru) protože systém musí provést sloučení souborů, kešování, přípravu dat a jiné kouzla.</label>
 	<label index="update.title">Aktualizovat stávající todoyu</label>
 	<label index="update.button">Aktualizovat</label>
-	<label index="update.info">Aplikuje všechny databázové změny a porovná současné sloupce s konfogurací</label>
+	<label index="update.info">Aplikuje všechny databázové změny a porovná současné sloupce s konfigurací</label>
 	<label index="updatetocurrentversion.title">Aktualizace databázové struktury</label>
 	<label index="updatetocurrentversion.button">Zavést změny v databázi</label>
 	<label index="updatetocurrentversion.button.noupdates">Není třeba žádných změn, pokračovat</label>
@@ -85,8 +87,8 @@
 	<label index="updatetocurrentversion.newColumns">Nové sloupce</label>
 	<label index="updatetocurrentversion.changedColumns">Změněné sloupce</label>
 	<label index="updatetocurrentversion.missingKeys">Chybějící tabulkové klíče (indexy)</label>
-	<label index="finishupdate.title">Úspěšná aktualiyace</label>
+	<label index="finishupdate.title">Úspěšná aktualizace</label>
 	<label index="finishupdate.text">Aktualizace vaší databáze proběhla úspěšně</label>
-	<label index="slogan.line1">Děujeme že používáte todoyu</label>
-	<label index="slogan.line2">Věříme že se vám líbí.</label>
+	<label index="slogan.line1">Děkujeme, že používáte todoyu</label>
+	<label index="slogan.line2">Věříme, že se vám líbí.</label>
 </labels>
