--- a/core/locale/cs_CZ/global.xml
+++ b/core/locale/cs_CZ/global.xml
@@ -2,7 +2,9 @@
 <labels>
 	<label index="tab.todoyu.label">todoyu</label>
 	<label index="yes">Ano</label>
+	<label index="ok">Ok</label>
 	<label index="no">Ne</label>
+	<label index="dismiss">Zrušit</label>
 	<label index="loading">Nahrává se</label>
 	<label index="expandall">Rozbalit vše</label>
 	<label index="author">Autor</label>
@@ -14,12 +16,13 @@
 	<label index="create">Vytvořit</label>
 	<label index="createNew">Vytvořit záznam:</label>
 	<label index="edit">Editovat</label>
-	<label index="load">Načtist</label>
+	<label index="load">Načíst</label>
 	<label index="save">Uložit</label>
 	<label index="cancel">Storno</label>
 	<label index="delete">Odstranit</label>
 	<label index="deleteRecord">Odstranit záznam</label>
 	<label index="show">Zobrazit</label>
+	<label index="showDetails">Ukaž podrobnosti</label>
 	<label index="hide">Skrýt</label>
 	<label index="unhide">Zobrazit</label>
 	<label index="rename">Přejmenovat</label>
@@ -27,6 +30,7 @@
 	<label index="update">Aktualizovat</label>
 	<label index="search">Najít</label>
 	<label index="back">Zpět</label>
+	<label index="version">Verze</label>
 	<label index="filter">Filtr</label>
 	<label index="type">Typ</label>
 	<label index="record">Záznam</label>
@@ -34,10 +38,12 @@
 	<label index="components">Komponenty</label>
 	<label index="status">Stav</label>
 	<label index="locked">Zamknuto</label>
+	<label index="enabled">Povoleno</label>
 	<label index="what">Co</label>
 	<label index="where">Kde</label>
 	<label index="when">Kdy</label>
-	<label index="until">Dokdy</label>
+	<label index="new">Nový</label>
+	<label index="until">Až do</label>
 	<label index="private">Soukromé</label>
 	<label index="start">Start</label>
 	<label index="stop">Stop</label>
@@ -45,17 +51,17 @@
 	<label index="beginning">Začátek</label>
 	<label index="deadline">Termín</label>
 	<label index="closeWindow">Zavřít okno</label>
-	<label index="notLoggedIn.errorMessage">Vaše prihlášení vypršelo. Operace nemohla být dokoncena. Prihlašte se znovu a opakujte operaci.</label>
-	<label index="close">Zavřít</label>
 	<label index="noAccess.errorMessage">Nemáte přístup k požadovaným datům</label>
+	<label index="notLoggedIn.errorMessage">Vaše přihlášení vypršelo. Operace nemohla být dokončena. Přihlaste se znovu a opakujte operaci.</label>
+	<label index="close">Zavřít</label>
 	<label index="noAccess.pageTitle">Není přístup</label>
 	<label index="noAccess.goBackToLastPage">Zpět na předchozí stránku</label>
-	<label index="noAccess.contactAdmin">Ups! Pokud chcete mít prístup do této sekce, nahlašte následující údaje administrátorovi systému todoyu:</label>
+	<label index="noAccess.contactAdmin">Hopla! Pokud chcete mít přístup do této sekce, nahlaste následující údaje administrátorovi systému todoyu:</label>
 	<label index="noAccess.requestURL">Požadovaná URL</label>
 	<label index="noAccess.missingRight">Chybějící práva</label>
 	<label index="footer.version">Verze</label>
 	<label index="footer.bugreport">Nahlásit chybu</label>
-	<label index="footer.bugreport.title">K nahláštení chyby použijte bug tracker na adrese bugs.todoyu.com</label>
+	<label index="footer.bugreport.title">K nahlášení chyby použijte bug tracker na adrese bugs.todoyu.com</label>
 	<label index="footer.forum">Diskutovat ve fóru</label>
 	<label index="footer.forum.title">Vyhledat nápovědu nebo podělit se s vlastním nápadem</label>
 	<label index="footer.usermanual">Příručka</label>
@@ -63,24 +69,39 @@
 	<label index="footer.api">API</label>
 	<label index="footer.api.title">Doxygen API Documentation</label>
 	<label index="footer.devmanual">Dev</label>
-	<label index="footer.devmanual.title">Příručka pro vývojaře a jiné znalce</label>
+	<label index="footer.devmanual.title">Příručka pro vývojáře a jiné znalce</label>
 	<label index="paging.page">Stránka</label>
 	<label index="input.autocompleter">Autodoplňování</label>
-	<label index="ajax.requestFailed">Nelze navázat spojení se servrem (spojení nebo server je mimo provoz?)</label>
+	<label index="ajax.requestFailed">Nelze navázat spojení se serverem (spojení nebo server je mimo provoz?)</label>
 	<label index="attr.is_active">Aktivní</label>
 	<label index="roles">Role</label>
 	<label index="role">Role</label>
 	<label index="role.new">Nová role</label>
-	<label index="role.attr.persons">Členové role</label>
-	<label index="headlet.ajaxloader.label">Synchronizuji data s webovym servrem</label>
-	<label index="headlet.about.label">O todoyu</label>
+	<label index="role.attr.persons">Členové rolí</label>
+	<label index="headlet.ajaxloader.label">Synchronizuji data s webovým serverem</label>
+	<label index="headlet.about.label">O programu</label>
 	<label index="unknown">n/a</label>
-	<label index="loaderBox.title">Cekejte prosím</label>
-	<label index="panelwidget.toggle">Otevrít zavrít Widget</label>
-	<label index="date_update">Datum poslední zmeny</label>
-	<label index="date_create">Vytvoreno</label>
-	<label index="id_person_create">Vytvoril</label>
-	<label index="of">of</label>
-	<label index="public">Verejné</label>
-	<label index="notpublic">Neverejné</label>
+	<label index="loaderBox.title">Čekejte prosím</label>
+	<label index="panelwidget.toggle">Otevřít/Zavřít toto okno</label>
+	<label index="date_update">Datum poslední změny</label>
+	<label index="date_create">Vytvořeno</label>
+	<label index="id_person_create">Vytvořil</label>
+	<label index="of">z</label>
+	<label index="public">Veřejné</label>
+	<label index="notpublic">Neveřejné</label>
+	<label index="wizard">Průvodce</label>
+	<label index="wizard.close">Zavřít průvodce</label>
+	<label index="wizard.close.confirm">Opravdu chcete průvodce ukončit?</label>
+	<label index="wizard.back">Zpět</label>
+	<label index="wizard.next">Pokračovat</label>
+	<label index="log.core">Core Debug Information</label>
+	<label index="log.debug">Debug Information</label>
+	<label index="log.notice">Notices</label>
+	<label index="log.error">Normal Errors</label>
+	<label index="log.security">Security Issues</label>
+	<label index="log.fatal">Fatal Errors</label>
+	<label index="controllerError.oops">Hopla!</label>
+	<label index="controllerError.info">todoyu nemůže zpracovat tento požadavek</label>
+	<label index="controllerError.reason">Zkontrolujte jestli máte správně napsanou adresu, nebo je možné, že požadované rozšíření bylo odstraněno. Zkuste vymazat cache prohlížeče.</label>
+	<label index="controllerError.goBack">Zpět do todoyu</label>
 </labels>
